# All-My-Time

GoLang/MyTimeZones/: build_release.ps1  build_release.sh  go.mod  main.go  mktzlist.go  timezone.go
GoLang/MyTimeZones/Releases/V1.2.3/Linux/: config.json
GoLang/MyTimeZones/pkg/config/: config.go
GoLang/MyTimeZones/pkg/logger/: logger.go
GoLang/MyTimeZones/pkg/timezone/: manager.go  manager_test.go  timezones.go
GoLang/MyTimeZones/pkg/ui/: add_zones.go  edit_zones.go  window.go
Python/MyTimeZones/: pyproject.toml  requirements.txt
Python/MyTimeZones/src/: config.py  yaru-timezones.json
Python/MyTimeZones/src/utils/: logger.py  timezone_utils.py
